<resources>
    <string name="app_name">Weather</string>
    <string name="today">Today</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="noInternetConnection">Could not fetch weather forecast. Check your internet connection and try again.</string>
    <string name="serverError">Could not fetch weather forecast: %s</string>
    <string name="wmo0">Clear</string>
    <string name="wmo1">Mostly clear</string>
    <string name="wmo2">Partly cloudy</string>
    <string name="wmo3">Cloudy</string>
    <string name="wmo45">Fog</string>
    <string name="wmo48">Fog</string>
    <string name="wmo51">Light drizzle</string>
    <string name="wmo53">Drizzle</string>
    <string name="wmo55">Dense drizzle</string>
    <string name="wmo56">Freezing drizzle</string>
    <string name="wmo57">Freezing drizzle</string>
    <string name="wmo61">Light rain</string>
    <string name="wmo63">Rain</string>
    <string name="wmo65">Heavy rain</string>
    <string name="wmo66">Freezing rain</string>
    <string name="wmo67">Freezing rain</string>
    <string name="wmo71">Light snow</string>
    <string name="wmo73">Snow</string>
    <string name="wmo75">Heavy snow</string>
    <string name="wmo77">Snow grains</string>
    <string name="wmo80">Light showers</string>
    <string name="wmo81">Showers</string>
    <string name="wmo82">Heavy showers</string>
    <string name="wmo85">Snow showers</string>
    <string name="wmo86">Heavy snow showers</string>
    <string name="wmo95">Thunderstorm</string>
    <string name="wmo96">Thunderstorm with hail</string>
    <string name="wmo99">Thunderstorm with hail</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="humidity">Humidity</string>
    <string name="feelsLike">Feels like</string>
    <string name="precipitation">Precipitation</string>
    <string name="pressure">Pressure</string>
    <string name="uvIndex">UV index</string>
    <string name="wind0">N</string>
    <string name="wind1">NNE</string>
    <string name="wind2">NE</string>
    <string name="wind3">ENE</string>
    <string name="wind4">E</string>
    <string name="wind5">ESE</string>
    <string name="wind6">SE</string>
    <string name="wind7">SSE</string>
    <string name="wind8">S</string>
    <string name="wind9">SSW</string>
    <string name="wind10">SW</string>
    <string name="wind11">WSW</string>
    <string name="wind12">W</string>
    <string name="wind13">WNW</string>
    <string name="wind14">NW</string>
    <string name="wind15">NNW</string>
    <string name="low">Low</string>
    <string name="moderate">Moderate</string>
    <string name="high">High</string>
    <string name="veryHigh">Very high</string>
    <string name="extreme">Extreme</string>
    <string name="cloudCover">Cloud cover</string>
    <string name="dewPoint">Dew point</string>
    <string name="unknownLocation">Unknown Location</string>
    <string name="settings">Settings</string>
    <string name="cityList">City list</string>
    <string name="temperatureUnit">Temperature unit</string>
    <string name="windSpeedUnit">Wind speed unit</string>
    <string name="precipitationUnit">Precipitation unit</string>
    <string name="about">About Weather</string>
    <string name="addCity">Add City</string>
    <string name="searchHint">Search for a city, address, etc</string>
    <string name="loading">Loading…</string>
    <string name="noResults">No results</string>
    <string name="sunday_short">Sun</string>
    <string name="monday_short">Mon</string>
    <string name="tuesday_short">Tue</string>
    <string name="wednesday_short">Wed</string>
    <string name="thursday_short">Thu</string>
    <string name="friday_short">Fri</string>
    <string name="saturday_short">Sat</string>
    <string name="add_widget">Add widget</string>
    <string name="clock_widget_description">Clock</string>
    <string name="help">Help</string>
    <string name="ok">OK</string>
    <string name="about_string"><![CDATA[Weather %1$s<br /><br />By Gustav Lindberg<br /><br />This app is licensed under the <a href="%4$s">GNU AGPL 3.0</a>.<br /><br />Source code: <a href="%2$s">%2$s</a><br /><br />Weather data from <a href="%3$s">%3$s</a>]]></string>
    <string name="feedback">Feedback</string>
    <string name="precipitationProbability">Precipitation risk</string>
    <string name="airQualityIndex">Air quality index</string>
    <string name="american">American</string>
    <string name="european">European</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="poor">Poor</string>
    <string name="veryPoor">Very poor</string>
    <string name="extremelyPoor">Extremely poor</string>
    <string name="unhealthyForSensitiveGroups">Unhealthy for sensitive groups</string>
    <string name="unhealthy">Unhealthy</string>
    <string name="veryUnhealthy">Very unhealthy</string>
    <string name="hazardous">Hazardous</string>
    <string name="unknownError">Unknown error</string>
    <string name="seaTemperature">Sea temperature</string>
    <string name="delete">Delete</string>
</resources>