<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="96dp"
    tools:context=".WeatherFragment">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/unknownLocation"
        android:textColor="@color/white"
        android:textSize="32sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="24sp"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/current_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="--"
                android:textColor="@color/white"
                android:textSize="64sp"
                tools:ignore="HardcodedText" />

            <TableLayout
                android:id="@+id/day_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white" />

                <include
                    android:id="@+id/day_0_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_1_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_2_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_3_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_4_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_5_summary"
                    layout="@layout/daily_summary" />

                <include
                    android:id="@+id/day_6_summary"
                    layout="@layout/daily_summary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/white" />
            </TableLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunrise"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/sunset"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_sunrise"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_sunset"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/wind"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/cloudCover"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_wind"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_cloud_cover"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/feelsLike"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/uvIndex"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_apparent_temperature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_uv_index"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/precipitation"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/humidity"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_precipitation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_humidity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/pressure"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/dewPoint"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_pressure"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_dew_point"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/precipitationProbability"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/airQualityIndex"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_precipitation_probability"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/current_air_quality_index"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/seaTemperature"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/current_sea_temperature"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="--"
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />

                    <TextView
                        android:id="@+id/empty_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="@color/white"
                        android:textSize="28sp"
                        tools:ignore="HardcodedText" />
                </TableRow>
            </TableLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="64dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>